--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
   },
   "dependencies": {
     "axios": "^0.26.0",
+    "bootstrap": "^5.1.3",
+    "bootstrap-vue": "^2.21.2",
     "core-js": "^3.8.3",
     "vue": "^2.6.14",
     "vue-browser-geolocation": "^1.8.0",
+    "vue-js-modal": "^2.0.1",
     "vue2-google-maps": "^0.10.7"
   },
   "devDependencies": {
